[gd_scene load_steps=13 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://items/star.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/bat.tscn" type="PackedScene" id=3]
[ext_resource path="res://items/Gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Ghost.tscn" type="PackedScene" id=5]
[ext_resource path="res://TileSet_snow.tres" type="TileSet" id=6]
[ext_resource path="res://player.tscn" type="PackedScene" id=7]
[ext_resource path="res://backgrounds/bg_castle.png" type="Texture" id=8]
[ext_resource path="res://sounds/star_hunter3.ogg" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -459, -209.254, 0, 0, 0, 0, -297, -200.372, 0, 0, 0, 0, -139, -211.228, 0, 0, 0, 0, 80, -168.792, 0, 0, 0, 0, 178.192, -170.655, 0, 0, 0, 0, 313, -1.01975, 0, 0, 0, 0, 570, 124, 0, 0, 0, 0, 691, 100.63, 0, 0, 0, 0, 823, 144, 0, 0, 0, 0, 630, 374, 0, 0, 0, 0, 1241, 183.529, 0, 0, 0, 0, 3111, 135, 0, 0, 0, 0, 3312, -6, 0, 0, 0, 0, 3600, -66, 0, 0, 0, 0, 1004.46, -323.427, 0, 0, 0, 0, 1266.96, -318.104, 0, 0, 0, 0, 1998.72, 79.3576, 0, 0, 0, 0, 2180.31, 95.327, 0, 0, 0, 0, 2610.02, -83.8854, 0, 0, 0, 0, 2764.65, -73.2391, 0, 0, 0, 0, 4174.23, 81.132, 0, 0, 0, 0, 4589.56, 90.0039, 0, 0, 0, 0, 4925.77, 105.973, 0, 0, 0, 0, 2355.07, 692.938, 0, 0, 0, 0, 2498.91, 689.389, 0, 0, 0, 0, 2570.83, 691.163, 0, 0, 0, 0, 2685.9, 689.389, 0, 0, 0, 0, 2772.2, 691.163, 0, 0, 0, 0, 2878.28, 682.292, 0, 0, 0, 0, 2497.11, 507.338, 0, 0, 0, 0, 2603.19, 505.563, 0, 0, 0, 0, 2702.08, 503.789, 0, 0, 0, 0, 2788.38, 507.338 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -172.379, 498.438, 0, 0, 0, 0, 770.336, 486.074, 0, 0, 0, 0, -320.774, -63.1851, 0, 0, 0, 0, -630.389, -109.243, 0, 0, 0, 0, -694.359, -311.389, 0, 0, 0, 0, -574.095, -270.448, 0, 0, 0, 0, -192.834, -267.889, 0, 0, 0, 0, 203.781, -257.654, 0, 0, 0, 0, 536.425, -265.33, 0, 0, 0, 0, 449.425, -83.6555, 0, 0, 0, 0, 203.781, 138.96, 0, 0, 0, 0, 214.016, 62.1962, 0, 0, 0, 0, 605.512, 108.255, 0, 0, 0, 0, 920.245, 110.813, 0, 0, 0, 0, 1076.33, 80.1078, 0, 0, 0, 0, 1255.45, -216.713, 0, 0, 0, 0, 1406.42, -191.125, 0, 0, 0, 0, 1314.3, 164.548, 0, 0, 0, 0, 1186.36, 392.282, 0, 0, 0, 0, 1524.12, 461.369, 0, 0, 0, 0, 1902.82, 486.957, 0, 0, 0, 0, 2163.82, 458.81, 0, 0, 0, 0, 2304.56, 456.252, 0, 0, 0, 0, 2207.32, 277.135, 0, 0, 0, 0, 1951.44, 261.783, 0, 0, 0, 0, 1728.83, 248.989, 0, 0, 0, 0, 1526.68, 259.224, 0, 0, 0, 0, 3863.55, -180.572, 0, 0, 0, 0, 2799.17, 191.602, 0, 0, 0, 0, 4940.52, 283.297, 0, 0, 0, 0, 4478.45, -351.377, 0, 0, 0, 0, 2670.47, -523.769, 0, 0, 0, 0, 2271.29, -544.24, 0, 0, 0, 0, 1864.44, -319.065, 0, 0, 0, 0, -172.379, 498.438 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1230.28, -133.107, 0, 0, 0, 0, 1156.56, -255.367, 0, 0, 0, 0, 1091.84, -370.435, 0, 0, 0, 0, 1401.08, -555.623, 0, 0, 0, 0, 1846.97, -589.784, 0, 0, 0, 0, 2217.35, -298.517, 0, 0, 0, 0, 1888.33, 95.2324, 0, 0, 0, 0, 1532.33, -88.1579, 0, 0, 0, 0, 1260.84, -258.963, 0, 0, 0, 0, 1230.28, -133.107, 0, 0, 0, 0, 2269.13, 476.756, 0, 0, 0, 0, 2727.61, 708.69, 0, 0, 0, 0, 3054.83, 575.643, 0, 0, 0, 0, 3252.61, 235.831 )
}

[node name="Level" type="Node2D"]

script = ExtResource( 1 )
Star = ExtResource( 2 )
Bat = ExtResource( 3 )
Gem = ExtResource( 4 )
Ghost = ExtResource( 5 )
Bee = null
Fly = null
total_stars = 0
stars_found = 0
num_bats = 0
num_ghosts = 0
num_bees = 0
num_flies = 0
do_physics_process = false

[node name="TileMap" type="TileMap" parent="." index="0"]

position = Vector2( -1.79785, 0 )
mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 70, 70 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -393206, 11, 0, -393205, 11, 0, -262150, 11, 0, -262149, 11, 0, -262148, 11, 0, -262147, 11, 0, -327670, 11, 0, -327669, 11, 0, -262113, 10, 0, -131081, 10, 0, -196597, 10, 0, -196595, 3, 0, -196594, 4, 0, -196593, 4, 0, -196592, 4, 0, -196591, 4, 0, -196590, 4, 0, -196589, 5, 0, -196577, 10, 0, -65549, 14, 0, -65548, 18, 0, -65545, 10, 0, -65543, 3, 0, -65542, 4, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 5, 0, -131061, 10, 0, -131041, 10, 0, -12, 19, 0, -11, 18, 0, -9, 10, 0, -65527, 10, 0, -65505, 10, 0, 65527, 10, 0, 1, 0, 0, 9, 10, 0, 31, 10, 0, 37, 10, 0, 51, 0, 0, 70, 10, 0, 131063, 10, 0, 65540, 0, 0, 65567, 10, 0, 65573, 10, 0, 65583, 0, 0, 65606, 10, 0, 196599, 10, 0, 131111, 10, 0, 131130, 0, 0, 131133, 0, 0, 131135, 0, 0, 131142, 10, 0, 262135, 10, 0, 196615, 3, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 5, 0, 196632, 0, 0, 196635, 0, 0, 196638, 0, 0, 196647, 10, 0, 196652, 0, 0, 196678, 10, 0, 327672, 0, 0, 262159, 0, 0, 262165, 0, 0, 262185, 0, 0, 262210, 0, 0, 262214, 10, 0, 393209, 0, 0, 458746, 8, 0, 458747, 8, 0, 458748, 8, 0, 458749, 8, 0, 458750, 8, 0, 458751, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 8, 0, 393232, 8, 0, 393233, 8, 0, 393234, 8, 0, 393235, 8, 0, 393236, 8, 0, 393237, 8, 0, 393238, 8, 0, 393239, 8, 0, 393240, 8, 0, 393241, 8, 0, 393242, 8, 0, 393243, 8, 0, 393244, 8, 0, 393245, 8, 0, 393246, 8, 0, 393247, 0, 0, 393249, 0, 0, 393251, 7, 0, 393252, 8, 0, 393253, 8, 0, 393254, 8, 0, 393255, 8, 0, 393256, 8, 0, 393257, 8, 0, 393258, 8, 0, 393259, 8, 0, 393260, 11, 0, 393262, 8, 0, 393263, 8, 0, 393264, 8, 0, 393265, 8, 0, 393266, 8, 0, 393267, 8, 0, 393268, 8, 0, 393269, 9, 0, 393273, 7, 0, 393274, 8, 0, 393275, 8, 0, 393276, 8, 0, 393277, 8, 0, 393278, 8, 0, 393279, 8, 0, 393280, 8, 0, 393281, 8, 0, 393282, 8, 0, 393283, 8, 0, 393284, 8, 0, 393285, 8, 0, 393286, 8, 0, 393287, 8, 0, 393288, 9, 0, 458783, 2, 0, 458785, 2, 0, 458793, 2, 0, 458798, 2, 0, 524319, 2, 0, 524321, 2, 0, 524322, 11, 0, 524323, 11, 0, 524324, 11, 0, 524325, 11, 0, 524326, 11, 0, 524327, 11, 0, 524328, 11, 0, 524329, 2, 0, 524333, 2, 0, 589855, 2, 0, 589868, 2, 0, 655391, 2, 0, 655403, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720938, 2, 0 )
_sections_unfolded = [ "Cell" ]

[node name="player" parent="." index="1" instance=ExtResource( 7 )]

position = Vector2( -115.52, 180.5 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]

[node name="ItemPositions" type="Path2D" parent="." index="2"]

position = Vector2( 0, 4.03329 )
scale = Vector2( 1, 1.01328 )
curve = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="3"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 1, 1 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

z_index = -1
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 10, 10 )
motion_mirroring = Vector2( 1048, 1024 )
_sections_unfolded = [ "Motion", "Visibility", "Z Index" ]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2048.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="bg_music" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "bg_music"

[node name="GhostPath" type="Path2D" parent="." index="5"]

curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="GhostPath" index="0"]

position = Vector2( -172.379, 498.438 )
rotation = -0.0131115
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="BatPath" type="Path2D" parent="." index="6"]

curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="BatPath" index="0"]

position = Vector2( 1230.28, -133.107 )
rotation = -2.11339
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0


