[gd_scene load_steps=15 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://items/star.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/bat.tscn" type="PackedScene" id=3]
[ext_resource path="res://items/Gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Ghost.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/bee.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/fly.tscn" type="PackedScene" id=7]
[ext_resource path="res://TileSet_candy.tres" type="TileSet" id=8]
[ext_resource path="res://player.tscn" type="PackedScene" id=9]
[ext_resource path="res://backgrounds/bg_castle.png" type="Texture" id=10]
[ext_resource path="res://sounds/star_hunter4.ogg" type="AudioStream" id=11]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -378.849, -474.982, 0, 0, 0, 0, -153.385, -470.145, 0, 0, 0, 0, -136.23, -545.121, 0, 0, 0, 0, -136.23, -605.585, 0, 0, 0, 0, 72.0784, -465.308, 0, 0, 0, 0, 72.0784, -520.935, 0, 0, 0, 0, 72.0784, -588.655, 0, 0, 0, 0, 277.937, -470.145, 0, 0, 0, 0, 277.937, -542.702, 0, 0, 0, 0, 280.387, -612.841, 0, 0, 0, 0, 645.54, -709.584, 0, 0, 0, 0, 873.455, -712.002, 0, 0, 0, 0, 1062.16, -707.165, 0, 0, 0, 0, 1285.17, -699.91, 0, 0, 0, 0, 1912.55, -644.282, 0, 0, 0, 0, 1993.42, -714.421, 0, 0, 0, 0, 2079.2, -762.793, 0, 0, 0, 0, 2081.65, -840.187, 0, 0, 0, 0, 2162.52, -724.095, 0, 0, 0, 0, 2231.14, -646.701, 0, 0, 0, 0, 2316.91, -581.399, 0, 0, 0, 0, 2375.73, -508.842, 0, 0, 0, 0, 3245.23, -275.208, 0, 0, 0, 0, 3380.02, -294.557, 0, 0, 0, 0, 3529.51, -294.557, 0, 0, 0, 0, 4019.65, -565.437, 0, 0, 0, 0, 4149.54, -570.274, 0, 0, 0, 0, 4299.03, -565.437, 0, 0, 0, 0, 4933.27, 537.916, 0, 0, 0, 0, 4729.86, 547.591, 0, 0, 0, 0, 4555.86, 557.265, 0, 0, 0, 0, 4369.61, 695.123, 0, 0, 0, 0, 4205.42, 871.679, 0, 0, 0, 0, 4053.47, 970.841, 0, 0, 0, 0, 3918.68, 949.074, 0, 0, 0, 0, 3901.53, 745.913, 0, 0, 0, 0, 3894.18, 542.753, 0, 0, 0, 0, 3651.56, 552.428, 0, 0, 0, 0, 3205.53, 603.218, 0, 0, 0, 0, 2815.87, 668.519, 0, 0, 0, 0, 2433.56, 687.868, 0, 0, 0, 0, 2411.02, -205.07, 0, 0, 0, 0, 2131.64, -197.814, 0, 0, 0, 0, 1675.81, -200.232, 0, 0, 0, 0, 1952.74, 421.341, 0, 0, 0, 0, 1195.48, 409.248 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -172.379, 498.438, 0, 0, 0, 0, 770.336, 486.074, 0, 0, 0, 0, -320.774, -63.1851, 0, 0, 0, 0, -630.389, -109.243, 0, 0, 0, 0, -511.676, -642.924, 0, 0, 0, 0, -148.974, -633.121, 0, 0, 0, 0, 627.895, -515.488, 0, 0, 0, 0, 1453.78, -535.093, 0, 0, 0, 0, 1703.75, -500.783, 0, 0, 0, 0, 1853.24, -586.558, 0, 0, 0, 0, 2017.44, -689.487, 0, 0, 0, 0, 2225.75, -694.388, 0, 0, 0, 0, 2367.89, -615.966, 0, 0, 0, 0, 2666.87, -397.854, 0, 0, 0, 0, 2360.53, -196.898, 0, 0, 0, 0, 1833.64, -191.996, 0, 0, 0, 0, 1020.01, -189.546, 0, 0, 0, 0, 409.784, -52.3068, 0, 0, 0, 0, 2223.3, 344.705, 0, 0, 0, 0, 2600.7, 702.506, 0, 0, 0, 0, 2271.29, -544.24, 0, 0, 0, 0, 1864.44, -319.065, 0, 0, 0, 0, -172.379, 498.438, 0, 0, 0, 0, 3710.87, 549.093, 0, 0, 0, 0, 4014.75, 289.32, 0, 0, 0, 0, 4762.7, -7.21405, 0, 0, 0, 0, 3863.3, -323.353, 0, 0, 0, 0, 3003.11, -450.789, 0, 0, 0, 0, -172.379, 498.438 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1888.33, 95.2324, 0, 0, 0, 0, 3252.61, 235.831, 0, 0, 0, 0, 2392.91, -98.1169, 0, 0, 0, 0, 2690.49, -388.345, 0, 0, 0, 0, 3406.87, -586.728, 0, 0, 0, 0, 3902.83, -564.686, 0, 0, 0, 0, 4729.43, -369.976, 0, 0, 0, 0, 5203.34, -325.891, 0, 0, 0, 0, 5519.29, 56.1814, 0, 0, 0, 0, 4821.27, 331.714, 0, 0, 0, 0, 4328.99, 313.345, 0, 0, 0, 0, 3891.81, 221.501, 0, 0, 0, 0, 3465.65, 225.175, 0, 0, 0, 0, 2778.66, 170.068, 0, 0, 0, 0, 2359.85, 239.87, 0, 0, 0, 0, 1985.12, 63.5289, 0, 0, 0, 0, 1999.82, -300.174, 0, 0, 0, 0, 2080.64, -491.21, 0, 0, 0, 0, 2400.26, -527.948, 0, 0, 0, 0, 2797.02, -921.041, 0, 0, 0, 0, 2988.06, -777.764, 0, 0, 0, 0, 1888.33, 95.2324 )
}

[node name="Level" type="Node2D" index="0"]

script = ExtResource( 1 )
Star = ExtResource( 2 )
Bat = ExtResource( 3 )
Gem = ExtResource( 4 )
Ghost = ExtResource( 5 )
Bee = ExtResource( 6 )
Fly = ExtResource( 7 )
total_stars = 0
stars_found = 0
num_bats = 0
num_ghosts = 0
num_bees = 0
num_flies = 0
do_physics_process = false

[node name="TileMap" type="TileMap" parent="." index="0"]

position = Vector2( -1.79785, 0 )
mode = 0
tile_set = ExtResource( 8 )
cell_size = Vector2( 70, 70 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -786420, 19, 0, -786417, 19, 0, -786414, 19, 0, -655331, 24, 0, -655330, 25, 0, -524292, 28, 0, -524289, 31, 0, -589822, 28, 0, -589819, 31, 0, -589813, 12, 0, -589812, 14, 0, -589810, 12, 0, -589809, 14, 0, -589807, 12, 0, -589806, 14, 0, -589796, 24, 0, -589795, 27, 0, -589794, 26, 0, -589793, 25, 0, -458761, 18, 0, -458756, 30, 0, -458753, 30, 0, -524286, 30, 0, -524283, 30, 0, -524278, 11, 0, -524261, 24, 0, -524260, 27, 0, -524259, 5, 0, -524258, 5, 0, -524257, 26, 0, -524256, 25, 0, -393225, 18, 0, -393220, 29, 0, -393217, 29, 0, -458750, 29, 0, -458747, 29, 0, -458726, 24, 0, -458725, 27, 0, -458724, 5, 0, -458723, 5, 0, -458722, 5, 0, -458721, 5, 0, -458720, 26, 0, -458719, 25, 0, -458694, 19, 0, -458693, 19, 0, -458692, 19, 0, -458691, 19, 0, -458690, 19, 0, -327689, 18, 0, -327687, 21, 0, -327686, 8, 0, -327685, 8, 0, -327684, 8, 0, -327683, 8, 0, -327682, 8, 0, -327681, 8, 0, -393216, 8, 0, -393215, 8, 0, -393214, 8, 0, -393213, 9, 0, -393212, 8, 0, -393211, 8, 0, -393210, 8, 0, -393209, 8, 0, -393208, 8, 0, -393207, 8, 0, -393206, 8, 0, -393205, 8, 0, -393204, 8, 0, -393203, 8, 0, -393202, 8, 0, -393201, 8, 0, -393200, 8, 0, -393199, 8, 0, -393198, 8, 0, -393197, 8, 0, -393196, 8, 0, -393195, 8, 0, -393194, 25, 0, -393191, 24, 0, -393190, 27, 0, -393189, 19, 0, -393188, 19, 0, -393187, 19, 0, -393186, 19, 0, -393185, 19, 0, -393184, 19, 0, -393183, 26, 0, -393182, 25, 0, -393171, 1, 0, -393169, 1, 0, -393167, 1, 0, -393165, 1, 0, -393159, 11, 0, -262153, 18, 0, -327664, 5, 0, -327663, 5, 0, -327662, 5, 0, -327661, 5, 0, -327660, 5, 0, -327659, 5, 0, -327658, 26, 0, -327657, 25, 0, -327656, 24, 0, -327655, 27, 0, -327654, 19, 0, -327653, 19, 0, -327652, 19, 0, -327651, 19, 0, -327650, 19, 0, -327649, 19, 0, -327648, 19, 0, -327647, 19, 0, -327646, 26, 0, -327645, 25, 0, -327635, 3, 0, -327633, 3, 0, -327631, 3, 0, -327629, 3, 0, -196617, 18, 0, -262135, 19, 0, -262134, 19, 0, -262133, 19, 0, -262132, 19, 0, -262099, 3, 0, -262097, 3, 0, -262095, 3, 0, -262093, 3, 0, -262088, 12, 0, -262087, 13, 0, -262086, 13, 0, -262085, 13, 0, -262084, 13, 0, -262083, 13, 0, -262082, 13, 0, -262081, 14, 0, -131081, 18, 0, -196570, 4, 0, -196565, 7, 0, -196564, 8, 0, -196563, 8, 0, -196562, 8, 0, -196561, 8, 0, -196560, 8, 0, -196559, 8, 0, -196558, 8, 0, -196557, 8, 0, -196556, 8, 0, -196555, 22, 0, -196544, 10, 0, -65545, 18, 0, -65542, 19, 0, -131057, 20, 0, -131056, 8, 0, -131055, 8, 0, -131054, 8, 0, -131053, 8, 0, -131052, 8, 0, -131051, 8, 0, -131050, 8, 0, -131049, 8, 0, -131048, 8, 0, -131047, 8, 0, -131046, 8, 0, -131045, 8, 0, -131044, 8, 0, -131043, 8, 0, -131042, 8, 0, -131041, 8, 0, -131040, 8, 0, -131039, 8, 0, -131038, 8, 0, -131037, 8, 0, -131036, 8, 0, -131035, 9, 0, -131030, 11, 0, -131005, 10, 0, -65522, 4, 0, 8, 20, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 9, 0, 40, 11, 0, 65, 10, 0, 131063, 18, 0, 131066, 18, 0, 65543, 4, 0, 65577, 11, 0, 196599, 18, 0, 196602, 18, 0, 131077, 20, 0, 131078, 22, 0, 131114, 11, 0, 131135, 11, 0, 262133, 18, 0, 196610, 20, 0, 196611, 9, 0, 196612, 22, 0, 196632, 0, 0, 196635, 0, 0, 196638, 0, 0, 196651, 11, 0, 196669, 11, 0, 196687, 1, 0, 327669, 18, 0, 262159, 1, 0, 262162, 2, 0, 262165, 1, 0, 262168, 3, 0, 262171, 3, 0, 262174, 3, 0, 262188, 11, 0, 262203, 11, 0, 262210, 0, 0, 262223, 3, 0, 393205, 18, 0, 393212, 0, 0, 393214, 0, 0, 327680, 0, 0, 327686, 2, 0, 327689, 2, 0, 327692, 2, 0, 327695, 3, 0, 327698, 3, 0, 327701, 3, 0, 327704, 3, 0, 327707, 3, 0, 327710, 3, 0, 327759, 3, 0, 458741, 18, 0, 458748, 3, 0, 458750, 3, 0, 393216, 3, 0, 393231, 3, 0, 393234, 3, 0, 393237, 3, 0, 393240, 3, 0, 393243, 3, 0, 393246, 3, 0, 393247, 0, 0, 393249, 6, 0, 393250, 4, 0, 393251, 7, 0, 393252, 8, 0, 393253, 8, 0, 393254, 8, 0, 393255, 8, 0, 393256, 8, 0, 393257, 8, 0, 393258, 8, 0, 393259, 8, 0, 393260, 6, 0, 393261, 6, 0, 393262, 8, 0, 393263, 8, 0, 393264, 8, 0, 393265, 8, 0, 393266, 8, 0, 393267, 8, 0, 393268, 8, 0, 393269, 9, 0, 393273, 7, 0, 393274, 8, 0, 393275, 8, 0, 393276, 8, 0, 393277, 8, 0, 393278, 8, 0, 393279, 8, 0, 393280, 8, 0, 393281, 8, 0, 393282, 8, 0, 393283, 8, 0, 393284, 8, 0, 393285, 8, 0, 393286, 8, 0, 393287, 8, 0, 393288, 9, 0, 393293, 6, 0, 393294, 6, 0, 393295, 6, 0, 393296, 6, 0, 524276, 21, 0, 524277, 8, 0, 524278, 8, 0, 524279, 8, 0, 524280, 8, 0, 524281, 8, 0, 524282, 8, 0, 524283, 8, 0, 524284, 8, 0, 524285, 8, 0, 524286, 8, 0, 524287, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 23, 0, 458763, 12, 0, 458764, 13, 0, 458765, 13, 0, 458766, 13, 0, 458767, 13, 0, 458768, 13, 0, 458769, 13, 0, 458770, 13, 0, 458771, 13, 0, 458772, 13, 0, 458773, 13, 0, 458774, 13, 0, 458775, 13, 0, 458776, 13, 0, 458777, 13, 0, 458778, 13, 0, 458779, 13, 0, 458780, 13, 0, 458781, 13, 0, 458782, 13, 0, 458783, 6, 0, 458785, 6, 0, 458786, 6, 0, 458787, 6, 0, 458788, 6, 0, 458789, 6, 0, 458790, 6, 0, 458791, 6, 0, 458792, 6, 0, 458793, 6, 0, 458798, 2, 0, 458809, 6, 0, 458810, 6, 0, 458811, 6, 0, 458812, 6, 0, 458813, 6, 0, 458828, 6, 0, 589813, 5, 0, 589814, 5, 0, 589815, 5, 0, 589816, 5, 0, 589817, 5, 0, 589818, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 5, 0, 589823, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524319, 6, 0, 524321, 6, 0, 524322, 6, 0, 524323, 6, 0, 524324, 6, 0, 524325, 6, 0, 524326, 6, 0, 524327, 6, 0, 524328, 6, 0, 524329, 6, 0, 524345, 6, 0, 524346, 6, 0, 524347, 6, 0, 524348, 6, 0, 524349, 6, 0, 524363, 6, 0, 589855, 6, 0, 589873, 6, 0, 589874, 6, 0, 589875, 6, 0, 589876, 6, 0, 589877, 6, 0, 589878, 6, 0, 589881, 6, 0, 589882, 6, 0, 589883, 6, 0, 589884, 6, 0, 589889, 6, 0, 589890, 6, 0, 589891, 6, 0, 589892, 6, 0, 589893, 6, 0, 589894, 6, 0, 589895, 6, 0, 589896, 6, 0, 589897, 6, 0, 589898, 6, 0, 655391, 6, 0, 655403, 6, 0, 655404, 6, 0, 655405, 6, 0, 655406, 6, 0, 655407, 6, 0, 655408, 6, 0, 655409, 6, 0, 655414, 6, 0, 655417, 6, 0, 655418, 6, 0, 655419, 6, 0, 655424, 6, 0, 720927, 6, 0, 720928, 6, 0, 720929, 6, 0, 720930, 6, 0, 720931, 6, 0, 720932, 6, 0, 720933, 6, 0, 720934, 6, 0, 720935, 6, 0, 720936, 6, 0, 720937, 6, 0, 720938, 6, 0, 720950, 6, 0, 720953, 6, 0, 720954, 6, 0, 720959, 6, 0, 786486, 6, 0, 786489, 6, 0, 786490, 6, 0, 786494, 6, 0, 852022, 6, 0, 852029, 6, 0, 917558, 6, 0, 917564, 6, 0, 983094, 6, 0, 983095, 6, 0, 983096, 6, 0, 983097, 6, 0, 983098, 6, 0, 983099, 6, 0 )
_sections_unfolded = [ "Cell" ]

[node name="player" parent="." index="1" instance=ExtResource( 9 )]

position = Vector2( -115.52, 180.5 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]

[node name="ItemPositions" type="Path2D" parent="." index="2"]

position = Vector2( 2.45068, 4.03329 )
scale = Vector2( 1, 1.01328 )
curve = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="3"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 1, 1 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

z_index = -1
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 10, 10 )
motion_mirroring = Vector2( 1048, 1024 )
_sections_unfolded = [ "Motion", "Visibility", "Z Index" ]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2048.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="bg_music" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 11 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "bg_music"

[node name="BeePath" type="Path2D" parent="." index="5"]

curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="BeePath" index="0"]

position = Vector2( -172.379, 498.438 )
rotation = -0.0131115
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="FlyPath" type="Path2D" parent="." index="6"]

curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="FlyPath" index="0"]

position = Vector2( 1888.33, 95.2324 )
rotation = 0.1027
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0


